tests/struct_composition_bad_multiple_embedded.stderr
tests/struct_composition_bad_multiple_embedded.hop:12:2: error: HOP2012: only one embedded field is allowed
