tests/struct_composition_bad_multiple_embedded.hop
// Verifies struct composition bad multiple embedded.
struct A {
	x int
}

struct B {
	y int
}

struct C {
	A
	B
}
